--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,5 +9,5 @@ services:
       - .:/app
     ports:
       - "3000:3000"
-    command: node index.js
+    command: sh -c "npm install && node index.js"
     restart: always
